Fix collapse tool in tablet mode

--- a/src/main/client/laf/default/service.css
+++ b/src/main/client/laf/default/service.css
@@ -294,6 +294,9 @@ blockquote {
 	display: inline-block;
 	width: 20px;
 }
+.wtmail-messagecolumn-collapse {
+	cursor: pointer;
+}
 .wtmail-messagecolumn-glyph {
 	display: inline-block;
 	margin: 0 0 0 2px;
